# knewz

./: CMakeLists.txt  Doxyfile  ProjectHome.md
cmake/: DBusMacros.cmake
src/: CMakeLists.txt  basemodel.cpp  basemodel.h  basetype.h  browserwidget.cpp  browserwidget.h  browserwidget.ui  com.googlecode.knewz.service.in  connection.cpp  connection.h  directorysettings.ui  directorywidget.h  displaysettings.ui  displaywidget.cpp  dockbuttonwidget.cpp  dockbuttonwidget.h  dockbuttonwidget.ui  downloadqueue.cpp  downloadqueue.h  downloadqueueobject.h  file.cpp  file.h  generalwidget.cpp  generalwidget.h  knewz.cpp  knewz.desktop  knewz.h  knewz.kcfg  knewzapplication.cpp  knewzapplication.h  knewzconfigdialog.cpp  knewzconfigdialog.h  knewzhtml.cpp  knewzhtml.h  knewzmodel.cpp  knewzmodel.h  knewzsearchmodel.cpp  knewzsearchmodel.h  knewzsettings.kcfg  knewzsettings.kcfgc  (+39 more)
src/icons/: CMakeLists.txt  knewz_orig.xcf
src/mimetype/: CMakeLists.txt  x-nzb.xml
src/search/: searchengines.txt
trunk/: CMakeLists.txt  Doxyfile
trunk/cmake/: DBusMacros.cmake
trunk/src/: CMakeLists.txt  basemodel.cpp  basemodel.h  basetype.h  browserwidget.cpp  browserwidget.h  browserwidget.ui  com.googlecode.knewz.service.in  connection.cpp  connection.h  directorywidget.cpp  displaysettings.ui  displaywidget.cpp  displaywidget.h  dockbuttonwidget.cpp  dockbuttonwidget.h  dockbuttonwidget.ui  downloadqueue.cpp  downloadqueue.h  downloadqueueobject.cpp  file.cpp  file.h  generalsettings.ui  generalwidget.cpp  knewz.cpp  knewz.desktop  knewz.h  knewz.kcfg  knewzapplication.cpp  knewzapplication.h  knewzconfigdialog.cpp  knewzconfigdialog.h  knewzexception.h  knewzmodel.cpp  knewzmodel.h  knewzsearchmodel.cpp  knewzsearchmodel.h  knewzsettings.kcfg  knewzsettings.kcfgc  knewztitlewidget.cpp  (+38 more)
trunk/src/icons/: CMakeLists.txt  icon.rc  knewz_orig.xcf
trunk/src/search/: CMakeLists.txt  searchengines.txt
