PROJECT(knewz)
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )
FIND_PACKAGE( KDE4 REQUIRED )
INCLUDE( KDE4Defaults )
INCLUDE(InstallRequiredSystemLibraries)
IF( UNIX )
SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
SET( CPACK_GENERATOR "DEB" )
SET( CPACK_PACKAGE_NAME "knewz" )
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET( CPACK_DEBIAN_PACKAGE_ARCHITECTURE "x86_64" )
SET( CPACK_DEBIAN_PACKAGE_DEPENDS "kdelib>=4.1, qt>=4.4" )
SET( CPACK_PACKAGE_CONTACT "Lawrence Lee <valheru.ashen.shugar@gmail.com>" )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "Binary newsgroup program for KDE" )
SET( DEBIAN_PACKAGE_SECTION "Newsgroups" )
ELSE( UNIX )
ENDIF( UNIX )
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
SET(CPACK_STRIP_FILES "bin/knewz")
SET(CPACK_SOURCE_STRIP_FILES "")
SET(CPACK_SET_DESTDIR ON)
INCLUDE( CPack )
SET( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" )
ADD_SUBDIRECTORY( src )